--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "bgg_plotly"}]
 python = "3.10.9"
 dash = "^2.8.1"
 gunicorn = "^20.1.0"
+requests = "^2.28.2"
 
 
 [build-system]
