--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ python = "3.10.9"
 dash = "^2.8.1"
 gunicorn = "^20.1.0"
 requests = "^2.28.2"
+dash-bootstrap-components = "^1.3.1"
+pandas = "^1.5.3"
+bs4 = "^0.0.1"
 
 
 [build-system]
